# typage

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  config.toml
.github/workflows/: release.yml
content/: about.typ  config.typ  index.typ
content/posts/: _index.typ  hello.typ
src/: build.rs  config.rs  deploy.rs  main.rs  model.rs  serve.rs  term.rs  util.rs  watch.rs
static/: style.css
templates/: base.typ  helpers.typ  list.typ  print.typ
templates/components/: callout.typ  card.typ  layout.typ  lib.typ  media.typ
tests/: build_basic.rs
