[package]
name = "typage"
version = "0.1.1"
edition = "2021"
rust-version = "1.92"
description = "A Rust static site generator powered by Typst HTML Export"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rice8y/typage"
repository = "https://github.com/rice8y/typage"
keywords = ["typst", "ssg", "static-site", "html", "cli"]
categories = ["command-line-utilities", "template-engine", "web-programming"]
include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
  "/src/**",
  "/tests/**",
  "/config.toml",
  "/content/**",
  "/templates/**",
  "/static/**",
]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
notify = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.9"
typst-syntax = "0.15"
walkdir = "2.5"
